# baby-reachy-mini-companion

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  app.py  pyproject.toml  requirements.txt  voices.npz
.github/: pull_request_template.md
.github/workflows/: lint.yml  release.yml  sync-hf-space.yml  tests.yml  typecheck.yml  uv-lock-check.yml
docs/: local_mac_architecture.md  scheme.md  scheme.mmd
scripts/: benchmark_ollama.py  download_yamnet.py  fix_mac_camera.sh  test_local_tools.py  test_qwen3_no_think.py  test_signal.py
src/demos/: __init__.py
src/demos/stone/: __init__.py  instructions.txt  requirements.txt
src/prompts_library/: __init__.py  witty_identity.py
src/reachy_mini_conversation_app/: camera_worker.py  config.py  console.py  gradio_personality.py  headless_personality_ui.py  main.py  moves.py  openai_realtime.py  prompts.py  tools.py  utils.py
src/reachy_mini_conversation_app/audio/: classifier.py  head_wobbler.py  speech_tapper.py
src/reachy_mini_conversation_app/input/: signal_interface.py
src/reachy_mini_conversation_app/local/: handler.py  llm.py  omni_handler.py  stt.py  tts.py  vad.py
src/reachy_mini_conversation_app/profiles/baby_buddy/: check_baby_status.py  instructions.txt  local_server_architecture.md  tools.txt
src/reachy_mini_conversation_app/profiles/default/: instructions.txt  tools copy.txt  tools.txt
src/reachy_mini_conversation_app/profiles/emotion_reader/: instructions.txt  tools.txt
src/reachy_mini_conversation_app/profiles/example/: instructions.txt  throw_stone.py  tools.txt
src/reachy_mini_conversation_app/profiles/stone/: __init__.py  instructions.txt
src/reachy_mini_conversation_app/prompts/: default_prompt.txt
src/reachy_mini_conversation_app/static/: index.html  main.js  style.css
src/reachy_mini_conversation_app/tools/: __init__.py  camera.py  check_baby_crying.py  check_danger.py  core_tools.py  dance.py  omni_tools.py  send_signal.py  send_signal_photo.py  soothe_baby.py  speak.py  stop_dance.py  story_time.py  sweep_look.py
src/reachy_mini_conversation_app/vision/: danger_detector.py  processors.py  yolo_head_tracker.py
src/reachy_mini_conversation_demo/: audio_sway.py  camera_worker.py  config.py  console.py  dance_emotion_moves.py  gstreamer.py  main.py  main_test.py  main_works.py  movement.py  moves.py  openai_realtime.py  openai_realtime_test.py  prompts.py  test_stop.py  tools.py  utils.py  vision.py
src/reachy_mini_conversation_demo/audio/: __init__.py  audio_sway.py  gstreamer.py  head_wobbler.py  speech_tapper.py
src/reachy_mini_conversation_demo/vision/: openai_vision.py  processors.py  yolo_head_tracker.py
src/tools_library/: __init__.py  sweep_look.py
tests/: conftest.py  test_openai_realtime.py
tests/audio/: test_head_wobbler.py
tests/vision/: test_processors.py
