[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_conversation_demo"
version = "0.1.0"
authors = [{ name = "Pollen Robotics", email = "contact@pollen-robotics.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy_mini",
    "reachy_mini_dances_library",
    "reachy_mini_toolbox",
    "openai>=2.1",
    "fastrtc",
    "aiortc==1.13.0",
    "onnxruntime",
    "PyGObject>=3.42.2, <=3.46.0",
    "torch",
    "transformers",
    "num2words",
    "dotenv",
    "ultralytics",
    "supervision",
    "mediapipe>=0.10.14",
]

[tool.uv.sources]
reachy-mini-dances-library = { path = "../reachy_mini_dances_library", editable = true }
reachy-mini = { git = "ssh://git@github.com/pollen-robotics/reachy_mini.git", branch = "develop" }
reachy-mini-toolbox = { git = "ssh://git@github.com/pollen-robotics/reachy_mini_toolbox.git", branch = "main" }
fastrtc = { git = "ssh://git@github.com/gradio-app/fastrtc.git", branch = "main" }

[project.optional-dependencies]
dev = ["pytest", "ruff==0.12.0"]

[project.scripts]
reachy-mini-conversation-demo = "reachy_mini_conversation_demo.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
reachy_mini = ["**/*"] # Inclut tous les fichiers non .py

[tool.ruff]
exclude = []
lint.extend-select = ["I", "D"]
lint.ignore = [
    "D203", # Incompatible with D211
    "D213", # Incompatible with D212
]
