[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_conversation_demo"
version = "0.1.0"
authors = [{ name = "Pollen Robotics", email = "contact@pollen-robotics.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiortc>=1.13.0",
    "fastrtc",
    "gradio>=5.49.0",
    "huggingface_hub>=0.34.4",
    "mediapipe>=0.10.14",
    "num2words",
    "onnxruntime",
    "openai>=2.1",
    "PyGObject>=3.42.2,<=3.46.0",
    "python-dotenv",
    "reachy_mini_dances_library",
    "reachy_mini_toolbox",
    "reachy_mini",
    "supervision",
    "torch",
    "transformers",
    "ultralytics",
]

[project.scripts]
reachy-mini-conversation-demo = "reachy_mini_conversation_demo.main:main"

[dependency-groups]
dev = ["pytest", "ruff==0.12.0"]

[tool.uv.sources]
reachy_mini_dances_library = { path = "../reachy_mini_dances_library", editable = true }
reachy_mini = { git = "ssh://git@github.com/pollen-robotics/reachy_mini.git", branch = "develop" }
reachy_mini_toolbox = { git = "ssh://git@github.com/pollen-robotics/reachy_mini_toolbox.git", branch = "main" }
fastrtc = { git = "ssh://git@github.com/gradio-app/fastrtc.git", branch = "main" }

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reachy_mini_conversation_demo = ["images/*"]

[tool.ruff]
line-length = 119
exclude = [".venv", "dist", "build", "**/__pycache__", "*.egg-info", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
]
ignore = [
  "E501",  # handled by formatter
  "D203",  # blank line before class docstring (conflicts with D211)
  "D213",  # summary on second line (conflicts with D212)
]

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
no-lines-before = ["standard-library", "local-folder"]
known-local-folder = ["reachy_mini_conversation_demo"]
known-first-party = ["reachy_mini", "reachy_mini_dances_library", "reachy_mini_toolbox"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"